Bug 89154 - Enable error pages. r=Fabrice.

--- a/b2g/chrome/content/aboutCertError.xhtml
+++ b/b2g/chrome/content/aboutCertError.xhtml
@@ -19,6 +19,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <title>&certerror.pagetitle;</title>
+    <meta http-equiv="Content-Security-Policy" content="default-src chrome:; object-src 'none'" />
     <meta name="viewport" content="width=device-width; user-scalable=false" />
     <link rel="stylesheet" href="chrome://global/skin/netError.css" type="text/css" media="all" />
     <!-- This page currently uses the same favicon as neterror.xhtml.
