--- a/b2g/chrome/content/default-apps/homescreen/index.html
+++ b/b2g/chrome/content/default-apps/homescreen/index.html
@@ -33,6 +33,9 @@
       <div class="link">
         <a href="https://appsco.pe/" target="_blank">Appscope</a>
       </div>
+      <div class="link">
+        <a href="https://wieodiwedwoeiwmdoedmw.com/" target="_blank">Error Page</a>
+      </div>
     </div>
   </body>
 </html>
