--- a/dom/b2g/devicestorage/test/test_dotdot.html
+++ b/dom/b2g/devicestorage/test/test_dotdot.html
@@ -25,7 +25,7 @@ https://bugzilla.mozilla.org/show_bug.cgi?id=717103
 devicestorage_setup(function () {
 
 function testingStorage() {
-  return navigator.getDeviceStorage("pictures");
+  return navigator.b2g.getDeviceStorage("pictures");
 }
 
 var tests = [
