--- a/dom/b2g/devicestorage/test/test_enumerateOptions.html
+++ b/dom/b2g/devicestorage/test/test_enumerateOptions.html
@@ -25,7 +25,7 @@ https://bugzilla.mozilla.org/show_bug.cgi?id=717103
 
 devicestorage_setup(function () {
 
-storage = navigator.getDeviceStorage("pictures");
+storage = navigator.b2g.getDeviceStorage("pictures");
 
 
 throws = false;
