--- a/dom/camera/test/test_camera_record.html
+++ b/dom/camera/test/test_camera_record.html
@@ -20,7 +20,7 @@ var baseConfig = {
 };
 
 var testFilePath = 'test.3gp';
-var storage = navigator.getDeviceStorage("videos");
+var storage = navigator.b2g.getDeviceStorage("videos");
 
 function cleanup()
 {
