--- a/dom/camera/test/test_camera_release.html
+++ b/dom/camera/test/test_camera_release.html
@@ -157,7 +157,7 @@ suite.test('start-recording-after-release', function() {
         profile: 'high',
         rotation: 0
       },
-      navigator.getDeviceStorage('videos'),
+      navigator.b2g.getDeviceStorage('videos'),
       'bug975472.mp4'
     );
   }
