--- a/dom/b2g/devicestorage/test/test_dirs.html
+++ b/dom/b2g/devicestorage/test/test_dirs.html
@@ -40,26 +40,26 @@ SpecialPowers.pushPrefEnv({
     ["device.storage.prompt.testing", true],
   ]
 }, function() {
-  ok(navigator.getDeviceStorage, "Should have getDeviceStorage");
-  ok(!navigator.getDeviceStorage("nonexistent-type"), "Should not have nonexistent storage");
+  ok(navigator.b2g.getDeviceStorage, "Should have getDeviceStorage");
+  ok(!navigator.b2g.getDeviceStorage("nonexistent-type"), "Should not have nonexistent storage");
 
-  ok(navigator.getDeviceStorage("pictures"), "Should have pictures storage");
-  ok(navigator.getDeviceStorage("videos"), "Should have videos storage");
-  ok(navigator.getDeviceStorage("music"), "Should have music storage");
+  ok(navigator.b2g.getDeviceStorage("pictures"), "Should have pictures storage");
+  ok(navigator.b2g.getDeviceStorage("videos"), "Should have videos storage");
+  ok(navigator.b2g.getDeviceStorage("music"), "Should have music storage");
 
   // Need special permission to access "apps". We always have the permission in B2G
   // mochitests, but on other platforms, we need to manually add the permission.
   var needAppsPermission = false;;
   if (!SpecialPowers.testPermission(
       "webapps-manage", SpecialPowers.Ci.nsIPermissionManager.ALLOW_ACTION, document)) {
-    ok(!navigator.getDeviceStorage("apps"), "Should not have apps storage without permission");
+    ok(!navigator.b2g.getDeviceStorage("apps"), "Should not have apps storage without permission");
     needAppsPermission = true;
   }
 
   var testFunction = function() {
-    ok(navigator.getDeviceStorage("apps"), "Should have apps storage with permission");
-    ok(navigator.getDeviceStorage("sdcard"), "Should have sdcard storage");
-    ok(navigator.getDeviceStorage("crashes"), "Should have crashes storage");
+    ok(navigator.b2g.getDeviceStorage("apps"), "Should have apps storage with permission");
+    ok(navigator.b2g.getDeviceStorage("sdcard"), "Should have sdcard storage");
+    ok(navigator.b2g.getDeviceStorage("crashes"), "Should have crashes storage");
     // The test harness reverts our pref changes automatically.
     SimpleTest.finish();
   }
