--- a/dom/b2g/devicestorage/test/test_enumerate.html
+++ b/dom/b2g/devicestorage/test/test_enumerate.html
@@ -79,8 +79,8 @@ function addError(e) {
   SimpleTest.finish();
 }
 
-var storage = navigator.getDeviceStorage("pictures");
-ok(navigator.getDeviceStorage, "Should have getDeviceStorage");
+var storage = navigator.b2g.getDeviceStorage("pictures");
+ok(navigator.b2g.getDeviceStorage, "Should have getDeviceStorage");
 var prefix = "devicestorage/" + randomFilename(12) + ".png"
 
 var files = [ "a.PNG", "b.pnG", "c.png", "d/a.png", "d/b.png", "d/c.png", "d/d.png", "The/quick/brown/fox/jumps/over/the/lazy/dog.png"]
