--- a/dom/b2g/devicestorage/test/test_enumerateMultipleContinue.html
+++ b/dom/b2g/devicestorage/test/test_enumerateMultipleContinue.html
@@ -30,7 +30,7 @@ function enumerateSuccess(e) {
 function enumerateFailure(e) {
 }
 
-var cursor = navigator.getDeviceStorage("pictures").enumerate();
+var cursor = navigator.b2g.getDeviceStorage("pictures").enumerate();
 cursor.onsuccess = enumerateSuccess;
 cursor.onerror = enumerateFailure;
 
