--- a/dom/b2g/devicestorage/test/test_enumerateNoParam.html
+++ b/dom/b2g/devicestorage/test/test_enumerateNoParam.html
@@ -85,8 +85,8 @@ function addError(e) {
   SimpleTest.finish();
 }
 
-var storage = navigator.getDeviceStorage("pictures");
-ok(navigator.getDeviceStorage, "Should have getDeviceStorage");
+var storage = navigator.b2g.getDeviceStorage("pictures");
+ok(navigator.b2g.getDeviceStorage, "Should have getDeviceStorage");
 var prefix = "devicestorage/" + randomFilename(12)
 
 var files = [ "a.png", "b.png", "c.png" ]
