--- a/dom/b2g/devicestorage/test/test_fs_app_permissions.html
+++ b/dom/b2g/devicestorage/test/test_fs_app_permissions.html
@@ -63,7 +63,7 @@ function TestCreateDirectory(iframe, data) {
     testComplete(iframe, data);
   }
 
-  let storage = iframe.contentDocument.defaultView.navigator.getDeviceStorage(data.type);
+  let storage = iframe.contentDocument.defaultView.navigator.b2g.getDeviceStorage(data.type);
   isnot(storage, null, "[TestCreateDirectory] Should be able to get storage object for " + data.type);
 
   if (!storage) {
@@ -91,7 +91,7 @@ function TestGet(iframe, data) {
 
   createTestFile(data.fileExtension);
 
-  let storage = iframe.contentDocument.defaultView.navigator.getDeviceStorage(data.type);
+  let storage = iframe.contentDocument.defaultView.navigator.b2g.getDeviceStorage(data.type);
   isnot(storage, null, "[TestGet] Should be able to get storage object for " + data.type);
 
   if (!storage) {
@@ -115,7 +115,7 @@ function TestCreateFile(iframe, data) {
     testComplete(iframe, data);
   }
 
-  let storage = iframe.contentDocument.defaultView.navigator.getDeviceStorage(data.type);
+  let storage = iframe.contentDocument.defaultView.navigator.b2g.getDeviceStorage(data.type);
   isnot(storage, null, "[TestCreateFile] Should be able to get storage object for " + data.type);
 
   if (!storage) {
@@ -145,7 +145,7 @@ function TestRemove(iframe, data) {
 
   createTestFile(data.fileExtension);
 
-  let storage = iframe.contentDocument.defaultView.navigator.getDeviceStorage(data.type);
+  let storage = iframe.contentDocument.defaultView.navigator.b2g.getDeviceStorage(data.type);
   isnot(storage, null, "[TestRemove] Should be able to get storage object for " + data.type);
 
   if (!storage) {
