--- a/dom/b2g/devicestorage/test/test_watchOther.html
+++ b/dom/b2g/devicestorage/test/test_watchOther.html
@@ -64,11 +64,11 @@ function onChangeFail(e) {
   ok(false, "We should never see any changes");
 }
 
-var storage = navigator.getDeviceStorage("pictures");
+var storage = navigator.b2g.getDeviceStorage("pictures");
 ok(storage, "Should have storage");
 storage.addEventListener("change", onChange);
 
-var storageOther = navigator.getDeviceStorage("music");
+var storageOther = navigator.b2g.getDeviceStorage("music");
 ok(storageOther, "Should have storage");
 storageOther.addEventListener("change", onChangeFail);
 
