Bug 98582 - Fine tune keypad UI. r=nathan.chang

--- a/b2g/chrome/content/shell.html
+++ b/b2g/chrome/content/shell.html
@@ -48,7 +48,7 @@
         <a id="endcall-anchor" class="anchor"><img src="images/controls/ic_endcall.png" data-key="Backspace" /></a>
       </div>
     </div>
-    <div>
+    <div id="numpad">
       <img id="numpad-bg" src="images/controls/keypad_number.png" />
       <div id="numpad-box">
         <p class="row">
